chore(api): Update swagger tags and route annotations
